refactor(order): streamline order creation and update processes with ModelMapper integration